<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:gravity="center_vertical"
    android:id="@+id/relativeLayout"
    android:background="#ffffffff">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:background="#ff1840dd"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/eliminarAsk"
            android:id="@+id/textView"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="#fffffdf9"
            android:textStyle="bold"
            android:gravity="center" />
    </RelativeLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/ivMarcaE"
        android:src="@drawable/ic_launcher"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvModeloE"
        android:layout_toEndOf="@+id/ivMarcaE"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:layout_alignTop="@+id/ivMarcaE"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@+id/ivMarcaE" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tvCaracteristicasE"
        android:layout_toEndOf="@+id/ivMarcaE"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_above="@+id/textView3"
        android:layout_below="@+id/tvModeloE"
        android:layout_marginRight="3dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:layout_toRightOf="@+id/ivMarcaE" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:id="@+id/textView3"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:layout_toEndOf="@+id/ivMarcaE"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/ivMarcaE"
        android:layout_above="@+id/linearLayout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPesoE"
        android:layout_toEndOf="@+id/textView3"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:layout_marginRight="3dp"
        android:layout_toRightOf="@+id/textView3"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/tvCaracteristicasE"
        android:textColorHint="#000000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/ivMarcaE"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:layout_margin="3dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/button"
            android:layout_weight="1"
            android:background="#ff1840dd"
            android:layout_margin="5dp"
            android:textColor="#fffffffb"
            android:onClick="cancelar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:background="#ff1840dd"
            android:layout_margin="5dp"
            android:textColor="#fffffffb"
            android:onClick="aceptar" />
    </LinearLayout>

</RelativeLayout>